--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
-<p class = styleRed>
+<p class = "styleRed">
 Hello world!
 </p>
