--- a/pages/page.html
+++ b/pages/page.html
@@ -6,7 +6,7 @@
     }
   </style>
 </head>
-<input type="button" value="create page" onclick="location.href='/index.html'"/>
+<input type="button" value="<" onclick="location.href='/index.html'"/>
 <p>
   
 </p>
