--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <p class = "styleRed">
-Hello world!
+  Hello world!
 </p>
+<input type="button" value="pageA" onclick="location.href='/pages/index.html'"/>
