--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <head>
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
+  <style>
+    input.redButton {
+      color: red
+      font-size: 20px;
+      border: 5px solid red;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px;
+    }
 </head>
 <p class = "styleRed">
   Hello world!
 </p>
-<input type="button" value="pageA" onclick="location.href='/pages/index.html'"/>
+<input class="redButton" type="button" value="page" onclick="location.href='/pages/page.html'"/>
