--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
   <style>
-    input.redButton {
+    .button {
       color: red
       font-size: 20px;
       border: 5px solid red;
@@ -13,4 +13,4 @@
 <p class = "styleRed">
   Hello world!
 </p>
-<input class="redButton" type="button" value="page" onclick="location.href='/pages/page.html'"/>
+<input type="button" value="page" onclick="location.href='/pages/page.html'"/>
