--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 <p class = "styleRed">
   Hello world!
 </p>
-<input type="button" value="page" onclick="location.href='/pages/page.html'"/>
+<input class="button" type="button" value="page" onclick="location.href='/pages/page.html'"/>
