--- a/pages/page.html
+++ b/pages/page.html
@@ -1,10 +1,5 @@
 <head>
-  <style>
-    p.body {
-      color: red
-      text-font: courier
-    }
-  </style>
+  <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <input type="button" value="<" onclick="location.href='/index.html'"/>
 <p>
