--- a/pages/page.html
+++ b/pages/page.html
@@ -1,7 +1,7 @@
 <head>
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
-<input type="button" value="<" onclick="location.href='/index.html'"/>
+<input class="button" type="button" value="<" onclick="location.href='/index.html'"/>
 <p>
   
 </p>
