--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <p class = "styleRed">
-  Hello world!
+  omeps's github page
 </p>
 <input class="button" type="button" value="page" onclick="location.href='/pages/page.html'"/>
