--- a/pages/page.html
+++ b/pages/page.html
@@ -2,7 +2,7 @@
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <input class="button" type="button" value="<" onclick="location.href='/index.html'"/>
-<p="styleRed">
+<p class="styleRed">
   There wasn't a whole lot more that could be done. It had become a wait-and-see situation with the final results no longer in her control. That didn't stop her from trying to control the situation. She demanded that things be done as she desperately tried to control what couldn't be.
 The chair sat in the corner where it had been for over 25 years. The only difference was there was someone actually sitting in it. How long had it been since someone had done that? Ten years or more he imagined. Yet there was no denying the presence in the chair now.
 I'm meant to be writing at this moment. What I mean is, I'm meant to be writing something else at this moment. The document I'm meant to be writing is, of course, open in another program on my computer and is patiently awaiting my attention. Yet here I am plonking down senseless sentiments in this paragraph because it's easier to do than to work on anything particularly meaningful. I am grateful for the distraction.
